--- a/pratybos_3/index.html
+++ b/pratybos_3/index.html
@@ -3,9 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
-  <body>
+  <body style="background-color: teal">
+    <div class="container mt-4" id="formContainer">
+      <div class="row justify-content-center">
+        <div class="col-md-6" style="border: thin black solid; padding: 1em">
+          <form>
+            <!-- Name and Lastname -->
+            <div class="mb-3 row">
+              <div class="col">
+                <label for="name" class="form-label">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Enter your name"
+                />
+              </div>
+              <div class="col">
+                <label for="lastname" class="form-label">Lastname</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="lastname"
+                  placeholder="Enter your lastname"
+                />
+              </div>
+            </div>
+
+            <!-- Card Number -->
+            <div class="mb-3">
+              <label for="cardNumber" class="form-label">Card Number</label>
+              <input
+                type="text"
+                class="form-control"
+                id="cardNumber"
+                placeholder="Enter your card number"
+              />
+            </div>
+
+            <!-- Book Name -->
+            <div class="mb-3">
+              <label for="bookName" class="form-label">Book Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="bookName"
+                placeholder="Enter the book name"
+              />
+            </div>
+
+            <!-- Submit Button -->
+            <button
+              type="submit"
+              id="submitBtn"
+              class="btn btn-primary"
+              style="width: 100%"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
